# TuxDDS

./: .gitignore  App.axaml  App.axaml.cs  DdsLoader.cs  DdsTexture.cs  Gui.cs  Gui.glade  GuiController.cs  LICENSE  MainWindow.axaml  MainWindow.axaml.cs  MainWindow.cs  MainWindow.glade  MainWindowController.cs  Program.cs  README.md  TuxDDS.csproj  TuxDDS.sln  app.manifest
Dds/: DdsLoader.cs  DdsTexture.cs
DirectXTexWrapper/: BUILD.md  CMakeLists.txt  CMakePresets.json  DirectXTexWrapper.cpp
Gui/: MainWindow.axaml  MainWindow.axaml.cs  MainWindow.cs  MainWindow.glade  MainWindowController.cs
Source/Dds/: DdsTexture.cs
Source/DirectXTexWrapper/: DirectXTexWrapper.cpp
ThirdPartyLicenses/: Avalonia_LICENSE  magic_enum_LICENSE
TuxDDSGui/: App.axaml  App.axaml.cs  Program.cs  TuxDDSGui.csproj
TuxDDSGui/Gui/: MainWindow.axaml  MainWindow.axaml.cs  MainWindowController.cs
TuxDDSGui/Views/: MainWindow.axaml  MainWindow.axaml.cs  MainWindowController.cs
TuxDDSTest/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
TuxDdsGui/: App.axaml  App.axaml.cs  Program.cs
TuxDdsGui/Controllers/: MainWindowController.cs
TuxDdsGui/Views/: DialogHelper.cs  MainWindow.axaml  MainWindow.axaml.cs  MainWindowController.cs
TuxDdsLib/: TuxDdsLib.csproj
TuxDdsLib/Dds/: DdsLoader.cs  DdsTexture.cs
TuxDdsLib/DirectXTexWrapper/: BUILD.md  CMakeLists.txt  CMakePresets.json  DirectXTexWrapper.cpp
TuxDdsLib/Export/: ExportFormats.cs  Exporter.cs
